# turbolink_app

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  crypto_pipe.h  fec_interface.h  mmap_reader.h  protocol.h  raptorq_fec.h  reed_solomon_fec.h  turbolink_engine.cpp  turbolink_engine.h  udp_socket.h  zstd_pipe.h
android/app/src/main/kotlin/com/turbolink/turbolink_app/: DiscoveryHandler.kt  FileTransferEngine.kt  MainActivity.kt  (+3 more)
lib/: app.dart  main.dart
lib/backend/mock/: discovery.dart  mock_discovery_service.dart  mock_transfer_service.dart  transfer.dart
lib/backend/models/: peer.dart  transfer.dart
lib/backend/native/: native_discovery_service.dart  native_transfer_service.dart  turbolink_ffi.dart
lib/backend/services/: discovery_android.dart  discovery_service.dart  native_discovery_service.dart  native_transfer_service.dart  transfer_android.dart  transfer_ffi.dart  transfer_service.dart
lib/core/di/: service_locator.dart
lib/core/theme/: app_theme.dart  turbo_colors.dart
lib/core/theme_engine/: base_theme.dart
lib/core/themes/: cyberpunk_theme.dart  industrial_theme.dart  minimalist_theme.dart  ocean_theme.dart
lib/providers/: aesthetic_provider.dart  connectivity_provider.dart  discovery_provider.dart  mock_mode_provider.dart  navigation_provider.dart  settings_provider.dart  theme_provider.dart  transfer_provider.dart  ui_theme_provider.dart
lib/screens/: home_screen.dart  transfer_screen.dart
lib/user_interface/screens/: connection_screen.dart  home_screen.dart  transfer_screen.dart
lib/user_interface/widgets/: peer_card.dart  radar_painter.dart  transfer_progress.dart
lib/user_interfaces/industrial/screens/: industrial_home_screen.dart  industrial_transfer_screen.dart
lib/user_interfaces/industrial/widgets/: industrial_peer_card.dart  industrial_radar_painter.dart  industrial_transfer_progress.dart
lib/widgets/: peer_card.dart  radar_painter.dart  transfer_progress.dart
test/: widget_test.dart
web/: index.html  manifest.json
